<resources>
    <string name="app_name">Weather App</string>
    <string name="maxTemp_minTemp">27° / 25°</string>
    <string name="particulateMatter">미세먼지</string>
    <string name="Region_here">신촌동</string>
    <string name="temp_realTime">27°</string>
    <string name="windChill_temp">체감온도 29°</string>
    <string name="particulateMatter_inform">좋음(29ug/m^3)</string>
    <string name="fineParticulateMatter">초미세먼지</string>
    <string name="fineParticulateMatter_inform">좋음(6ug/m^3)</string>
    <string name="raining_graph_time1">오후 1시</string>
    <string name="raining_percent1">80%</string>
    <string name="raining_amount1">2.4mm</string>
    <string name="humid_condition1">높음</string>
    <string name="humid_amount1">74</string>
    <string name="text_humidCondition">매우 습한 날이네요ㅠㅠ</string>
    <string name="region_name">지역 이름</string>
    <string name="region_realtime_temp">27°</string>
    <string name="region_management">지역 관리</string>
    <string name="clothesFashion">옷차림</string>
    <string name="whatClothesToday">오늘 뭐 입지?</string>
    <string name="temp">온도</string>
    <string name="rain">강수</string>
    <string name="humid">습도</string>
    <string name="today">오늘</string>
    <string name="tomorrow">내일</string>
    <string name="dayAfterTomorrow">8/1</string>
    <string name="threeDayAfterTomorrow">8/2</string>
    <string name="weatherByTime">시간 별 날씨</string>
    <string name="Loading">Loading…</string>
    <string name="Detailed_region">OO구 OO동</string>
    <string name="comment_clothes">매우 더운 날이에요!</string>
    <string name="recommend_clothes">반팔티</string>
    <string name="temp_byTime1">26°</string>
    <string name="rain_condition">비가 많이 오는 날이네요</string>
    <string name="weatherCondition">흐림</string>
    <string name="currentDate_minTemp">25°</string>
    <string name="currentDate_maxTemp">27°</string>
    <string name="slash">/</string>
    <string name="txt_temp_weatherCondition">비가 오는 하루에요. 외출할 때는 우산을 챙겨주세요.</string>
</resources>