<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cl_fragment_mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_blue"
    tools:context=".Fragment.TempFragment">

    <TextView
        android:id="@+id/tv_main_tempNow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/region_realtime_temp"
        android:textColor="@color/white"
        android:textSize="85sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_main_weatherCondition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/weatherContext"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toEndOf="@+id/tv_main_tempNow"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_main_tempMax"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/currentDate_maxTemp"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/tv_main_tempNow"
        app:layout_constraintTop_toBottomOf="@+id/tv_main_weatherCondition" />

    <TextView
        android:id="@+id/tv_main_slash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/slash"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/tv_main_tempMax"
        app:layout_constraintTop_toBottomOf="@+id/tv_main_weatherCondition" />

    <TextView
        android:id="@+id/tv_main_tempMin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="20dp"
        android:text="@string/currentDate_minTemp"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/tv_main_slash"
        app:layout_constraintTop_toBottomOf="@+id/tv_main_weatherCondition" />

    <TextView
        android:id="@+id/tv_main_windChillTemp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/windChill_temp"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/tv_main_tempMin"
        app:layout_constraintTop_toBottomOf="@+id/tv_main_weatherCondition" />

    <Button
        android:id="@+id/btn_tempFragment_goSch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_shape"
        android:layout_marginTop="20dp"
        android:text="@string/final_schedule"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_main_tempNow" />

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/btn_tempFragment_goSch" />

    <Button
        android:id="@+id/btn_ScheduleFragment_addSch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_shape"
        android:text="일정 추가"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>